--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,7 @@
             Players
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'list-of-players' %}">Players</a></li>
+            <li><a class="dropdown-item" href="{% url 'all_players' %}">Players</a></li>
 {#            <li><hr class="dropdown-divider"></li>#}
           </ul>
         </li>
