--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,12 +15,15 @@
             Players
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'list-of-players' %}">Players</a></li>
+            <li><a class="dropdown-item" href="{% url 'all_players' %}">Players</a></li>
 {#            <li><hr class="dropdown-divider"></li>#}
           </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
+        </li>
+               <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'all_products' %}">Store</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
