--- a/templates/store/all_products.html
+++ b/templates/store/all_products.html
@@ -1,35 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>all_products</title>
-</head>
-<body>
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col">Product Name</th>
-        <th scope="col">Price</th>
-        <th scope="col">Description</th>
-        <th scope="col">Size</th>
-        <th scope="col">Number of products available</th>
-        <th scope="col">Type</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for product in all_products %}
-        <tr>
-            <th scope="row">1</th>
-            <td>{{ product.name_of_product }}</td>
-            <td>{{ product.price }}</td>
-            <td>{{ product.description_of_product }}</td>
-            <td>{{ product.sizet }}</td>
-            <td>{{ product.number_of_products }}</td>
-            <td>{{ product.prod_type }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %} Players {% endblock %}
+{% block content %}
+    <div class="row" style="padding-top:30px;">
+    <div class="col">
+    <div class="panel-group">
+        <div class="panel panel-default">
+        <div class="panel-heading">  Woman's Products</div>
+            <div class="panel-body">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Product Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Size</th>
+                        <th scope="col">Number of products available</th>
+                        <th scope="col">Type</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for product in all_products %}
+                        {% if  product.genre == 'F' %}
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>{{ product.name_of_product }}</td>
+                                <td>{{ product.price }}</td>
+                                <td>{{ product.description_of_product }}</td>
+                                <td>{{ product.sizet }}</td>
+                                <td>{{ product.number_of_products }}</td>
+                                <td>{{ product.prod_type }}</td>
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="col">
+    <div class="panel-group">
+        <div class="panel panel-default">
+        <div class="panel-heading"> Man's Products</div>
+            <div class="panel-body">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Product Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Size</th>
+                        <th scope="col">Number of products available</th>
+                        <th scope="col">Type</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for product in all_products %}
+                        {% if  product.genre == 'M' %}
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>{{ product.name_of_product }}</td>
+                                <td>{{ product.price }}</td>
+                                <td>{{ product.description_of_product }}</td>
+                                <td>{{ product.sizet }}</td>
+                                <td>{{ product.number_of_products }}</td>
+                                <td>{{ product.prod_type }}</td>
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+{% endblock %}
