--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -56,10 +56,25 @@
                 </li>
                     </ul>
             </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            {% if request.user.is_authenticated %}
+                <div class="btn-group">
+                    <button type="button" class="btn btn-outline-info dropdown-toggle" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                        My profile, {{ request.user.username }}
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a></li>
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
+                </div>
+            {% else %}
+                <a href="{% url 'login' %}" class="btn btn-outline-success me-2">Login</a>
+                <a href="{% url 'sign_up' %}" class="btn btn-outline-secondary">Sign up</a>
+            {% endif %}
+{#            <form class="d-flex" role="search">#}
+{#                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
+{#                <button class="btn btn-outline-success" type="submit">Search</button>#}
+{#            </form>#}
         </div>
     </div>
 </nav>
