--- a/templates/store/create_clothes.html
+++ b/templates/store/create_clothes.html
@@ -2,6 +2,10 @@
 {% block title %} Add clothes products {%  endblock %}
 
 {% block content %}
-
-
+<div>
+    <form method="post" {% csrf_token %}>
+    {{ form.as_p }}
+        <input type="submit" value="ADD">
+    </form>
+</div>
 {% endblock %}
