--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--{#de intrebat trainer de unde preluam partea a 2-a din linkul de mai sus#}-->
+    <link rel="stylesheet" href="{% static 'style/style.css' %}"/>
 </head>
 <body>
-
+<div class="wrapper">
 {% include 'navbar.html' %}
 {% block content %} {% endblock %}
-
+</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
