--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -3,10 +3,10 @@
 {% block title %} Home {% endblock %}
 
 {% block content %}
-<div class="'container-fluid">
+
+<div class="container-fluid background-image">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-
         </div>
     </div>
 </div>
