--- a/templates/store/delete_accessories.html
+++ b/templates/store/delete_accessories.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %} Delete clothing item from website {% endblock %}
+{% block content %}
 
-</body>
-</html>
+{% endblock %}
