--- a/templates/store/create_clothes.html
+++ b/templates/store/create_clothes.html
@@ -2,10 +2,25 @@
 {% block title %} Add clothes products {%  endblock %}
 
 {% block content %}
-<div>
-    <form method="post" {% csrf_token %}>
-    {{ form.as_p }}
-        <input type="submit" value="ADD">
-    </form>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <br>
+        <div class="card">
+            <div class="card-header">
+                <h3 class="text-center">Create Clothes</h3>
+            </div>
+            <form method="post">
+                {% csrf_token %}
+               <div class="card-body">
+                   {{ form.as_p }}
+               </div>
+                <div class="card-footer text-center">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </form>
+        </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
